# hyset

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  profiling_metrics.xlsx
apps/: CMakeLists.txt  bitmap.cu  cpu.cu  dichotomy.cu  fgss.cu  hybrid.cu  queue.cu
include/hyset/: collection.hpp  containers.hpp  cost.hpp  device_algorithms.hpp  helpers.hpp  host_algorithms.hpp  hybrid_algorithms.hpp  hybrid_kernels.hpp  index.hpp  output.hpp  partitioner.hpp  similarity.hpp  statistics.hpp  structs.hpp  timer.hpp  verification.hpp
src/: CMakeLists.txt  bitmap.cu  cost_model.cu  cpu.cu  cpu_multi.cu  cpu_single.cu  dichotomy.cu  fgss.cu  hybrid.cu  queue.cu  scenarios.cu  timer.cu
